major final changes made

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -155,6 +155,7 @@ body{
 	padding-top:10px;
 	margin-right:24px;
 	opacity:0.5;
+	transition:opacity 0.25s ease-in-out;
 }
 
 .fa:nth-child(1){
@@ -166,7 +167,7 @@ body{
     content: '';
     display: block;
     width: 0;
-    height: 2px;
+    height: 5px;
     background: #fff;
     transition: width .2s;
     animation: underline 5s infinite
@@ -312,4 +313,20 @@ body{
 		margin-top:5px;
 		transform: translate3d(8px,-24px,0);
 	}
+
+	.footer-text{
+		font-size: 18px;
+	}
+}
+
+
+/*****Final changes********/
+.nav-link:hover{
+	cursor: pointer;
+}
+
+.fa:hover{
+	cursor: pointer;
+	opacity:1;
+	transition:0.25s ease-in-out;
 }
