--- a/src/app/departmentdetail/departmentdetail.component.html
+++ b/src/app/departmentdetail/departmentdetail.component.html
@@ -29,13 +29,13 @@
 			</div>
 		</div>
 		<div class="col-md-1 d-none d-md-block indicators">
-			<p><img src="assets/up.png" (click)="changeEvent('showPrevious')" style="height:100px;width:100px"></p>
+			<p><img src="assets/up.png" (click)="changeEvent('showPrevious')" class="navigatearrows"></p>
 			<p class="circle active " (click)="showActive($event,0)"></p>
 			<p class="circle " (click)="showActive($event,1)"></p>
 			<p class="circle " (click)="showActive($event,2)"></p>
 			<p class="circle " (click)="showActive($event,3)"></p>
 			<p class="circle " (click)="showActive($event,4)"></p>
-			<p><img src="assets/down.png" (click)="changeEvent('show')" style="height:100px;width:100px"></p>
+			<p><img src="assets/down.png" (click)="changeEvent('show')" class="navigatearrows"></p>
 		</div>
 	</div>
 </div>
