--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" *ngIf="!mobile">
+<div class="container-fluid">
 	<div class="row text-center head-row">
 		<div class="col-10">
 			<p class="text-left text-md-center"> <img src="assets/reversevc.png" class="image-head"></p>
