--- a/src/app/departmentdetail/departmentdetail.component.css
+++ b/src/app/departmentdetail/departmentdetail.component.css
@@ -20,18 +20,18 @@
 	border-radius: 100%;
 	height:15px;
 	width:15px;
-	margin-left:40px;
+	margin-left:12.5px;
 }
 
 .circle.active{
 	background-color:#fff;
 	height:20px;
 	width:20px;
-	margin-left:37.5px;
+	margin-left:10px;
 }
 
 .indicators{
-	padding-top: 2%;
+	padding-top: 7.5%;
 	padding-left:4%;
 }
 
@@ -111,8 +111,8 @@
 	}
 
 	.blur{
-		width:105%;
-		transform: translateX(-62%);
+		width:75%;
+		transform: translateX(-66.5%);
 		position:absolute;
 		min-height:120%;
 		bottom:-10%;
@@ -125,5 +125,15 @@
 	.mobile{
 		margin-bottom: 100px;
 	}
+
+	.button-text{
+		font-size:18px;
+	}
 }
 
+
+/*****Final changes******/
+.navigatearrows{
+	height:40px;
+	width:40px;
+}
