--- a/src/app/departments/departments.component.css
+++ b/src/app/departments/departments.component.css
@@ -217,13 +217,13 @@
 .glide__arrow {
   position: absolute;
   display: block;
-  top: 45%;
+  top: 35%;
   z-index: 2;
   color: white;
   text-transform: uppercase;
   padding: 9px 12px;
   background-color: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.5);
+  border: none;
   border-radius: 4px;
   box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.1);
   text-shadow: 0 0.25em 0.5em rgba(0, 0, 0, 0.1);
@@ -246,7 +246,7 @@
 .glide__bullets {
   position: absolute;
   z-index: 2;
-  bottom: -1em;
+  bottom: -2em;
   left: 50%;
   display: inline-flex;
   list-style: none;
@@ -286,6 +286,21 @@
 
   @media screen and (max-width:675px){
     .glide__bullets{
-      bottom:0em;
+      bottom:-1em;
     }
   }
+
+  .navigateimg{
+    height:40px;
+    width:40px;
+  }
+
+  .glide__arrow:first-child{
+    transform:translateX(-150%);
+  }
+
+  .glide__arrow:last-child{
+    transform:translateX(150%);
+  }
+  
+
