--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -50,16 +50,16 @@
     </div>
 
 
-   <!--  <div class="glide__arrows" data-glide-el="controls">
-      <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
-      <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
-    </div> -->
+    <div class="glide__arrows" data-glide-el="controls" [class.d-none]="mobile">
+      <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><img class="navigateimg" src="assets/left.png"></button>
+      <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><img class="navigateimg" src="assets/right.png"></button>
+    </div>
 
     <div class="glide__bullets" data-glide-el="controls[nav]">
+    <button class="glide__bullet" data-glide-dir="=0"></button>
     <button class="glide__bullet" data-glide-dir="=1"></button>
     <button class="glide__bullet" data-glide-dir="=2"></button>
     <button class="glide__bullet" data-glide-dir="=3"></button>
-    <button class="glide__bullet" data-glide-dir="=4"></button>
   </div>
   </div>
 </div>
