--- a/src/app/managerdetail/managerdetail.component.css
+++ b/src/app/managerdetail/managerdetail.component.css
@@ -1,3 +1,20 @@
+/****experiments****/
+.demo-txt{
+	color:#fff;
+	font-weight:bold;
+	font-size:22px;
+	border-bottom: 2px solid #fff;
+}
+
+.events-head{
+	color:#fff;
+	font-size:32px;
+	margin-bottom: 0;
+	transform:translateX(12%);
+	font-weight:bold;
+}
+
+
 .head-text{
 	font-size:64px;
 	color:#fff;
@@ -32,13 +49,17 @@
 }
 
 .manager-name,.manager-num{
-	font-size:24px;
 	color:#ffffff;
 }
 
 .manager-name{
+	font-size:24px;
 	font-weight: bold;
 	margin-bottom: 0;
+}
+
+.manager-num{
+	font-size: 18px;
 }
 
 .manager-col{
@@ -46,16 +67,17 @@
 }
 
 .fa{
-	font-size: 32px;
+	font-size: 24px;
 	color:#ffffff;
 	border:1px solid #ffffff;
 	border-radius: 100%; 
-	height:56px; 
-	width:56px; 
+	height:40px; 
+	width:40px; 
 	text-align: center;
-	padding-top:10px;
-	margin-right:14px;
-	opacity:0.8;
+	padding-top:6px;
+	margin-right:16px;
+	opacity:0.5;
+	transition:opacity 0.25s ease-in;
 }
 
 .fa:last-child{
@@ -79,7 +101,7 @@
 	.cross{
 		height:16px;
 		width:16px;
-		transform: translateY(0px);
+		transform: translateY(30%);
 	}
 
 	.image-head{
@@ -93,4 +115,17 @@
 		margin-top:50%;
 	}
 
+	.fa{
+		opacity:1;
+	}
+
 }
+
+
+/******Last changes*******/
+.fa:hover{
+	opacity:1;
+	transition:0.25s ease-in;
+}
+
+
