--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -1,10 +1,23 @@
+
+<!-- For creatives -->
 <div class="container" *ngIf="managers=='creatives'">
-	<div class="row text-center head-row">
-		<div class="col-10" >
-			<p class="text-left text-md-center"> <img src="assets/creatives_head.png" class="image-head"></p>
+	<div class="container container-head">
+		<div class="row text-center head-row" *ngIf="!mobile">
+			<div class="col-10" >
+				<p class="text-left text-md-center"> <img src="assets/creatives_head.png" id="creatives-head" class="image-head"></p>
+			</div>
+			<div class="col-2" >
+				<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
+			</div>
 		</div>
-		<div class="col-2" >
-			<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
+	</div>
+
+	<div class="row head-row" *ngIf="mobile">
+		<div class="col-10">
+		  	<p class="events-head text-center">CREATIVES</p>
+		</div>
+		<div class="col-2">
+			<p class="text-right"><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
 		</div>
 	</div>
 
@@ -30,13 +43,17 @@
 
 </div>
 
+
+<!-- For events -->
 <div class="container-fluid" *ngIf="managers=='events'">
-	<div class="row text-center head-row" *ngIf="!mobile">
-		<div class="col-10">
-			<p class="text-left text-md-center"> <img src="assets/events_head.png" class="image-head"></p>
-		</div>
-		<div class="col-2">
-			<p><img class="cross" id="events-cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
+	<div class="container container-head">
+		<div class="row text-center head-row" *ngIf="!mobile">
+			<div class="col-10">
+				<p class="text-left text-md-center"> <img src="assets/events_head.png" class="image-head"></p>
+			</div>
+			<div class="col-2">
+				<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
+			</div>
 		</div>
 	</div>
 
@@ -69,44 +86,5 @@
 			      </div>
 			  </div>
 		</div>
-
-		<!-- <div class="col-12 col-md-3">
-			<div class="row">
-				<div class="col-12 manager-col">
-					<img src="assets/shanbhag.png" class="manager-img">
-					<p class="manager-name text-uppercase text-center">rahul shanbag</p>
-					<p class="manager-num text-center">9090909090</p>
-				</div>
-			</div>
-			 <div class="row mt-4" style="padding-bottom:32px;">
-				  <div class="col-12 text-center icons">
-			          <span class="fa fa-twitter"></span>
-			          <span class="fa fa-linkedin"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
-			      </div>
-			  </div>
-		</div>
-
-		<div class="col-12 col-md-3">
-			<div class="row">
-				<div class="col-12 manager-col">
-					<img src="assets/shanbhag.png" class="manager-img">
-					<p class="manager-name text-uppercase text-center">rahul shanbag</p>
-					<p class="manager-num text-center">9090909090</p>
-				</div>
-			</div>
-			 <div class="row mt-4" style="padding-bottom:32px;">
-				  <div class="col-12 text-center icons">
-			          <span class="fa fa-twitter"></span>
-			          <span class="fa fa-linkedin"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
-			      </div>
-			  </div>
-		</div> -->
-
-
 	</div>
-
 </div>
