--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -46,6 +46,54 @@
             infrastructure
           </div>
         </li>
+
+        <li class="glide__slide">
+          <div class="d-image">
+            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('departmentdetail/mediaandpublicity')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+          </div>
+          <div class="text-num text-center text-uppercase">
+            05
+          </div>
+          <div class="text-name text-center text-uppercase">
+            media and publicity
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="d-image">
+            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('departmentdetail/hospitality')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+          </div>
+          <div class="text-num text-center text-uppercase">
+            06
+          </div>
+          <div class="text-name text-center text-uppercase">
+            hospitality
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="d-image">
+            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('departmentdetail/fnb')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+          </div>
+          <div class="text-num text-center text-uppercase">
+            07
+          </div>
+          <div class="text-name text-center text-uppercase">
+            food and beverages
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="d-image">
+            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('departmentdetail/marketing')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+          </div>
+          <div class="text-num text-center text-uppercase">
+            08
+          </div>
+          <div class="text-name text-center text-uppercase">
+            marketing
+          </div>
+        </li>        
       </ul>
     </div>
 
@@ -60,6 +108,10 @@
     <button class="glide__bullet" data-glide-dir="=1"></button>
     <button class="glide__bullet" data-glide-dir="=2"></button>
     <button class="glide__bullet" data-glide-dir="=3"></button>
+    <button class="glide__bullet" data-glide-dir="=4"></button>
+    <button class="glide__bullet" data-glide-dir="=5"></button>
+    <button class="glide__bullet" data-glide-dir="=6"></button>
+    <button class="glide__bullet" data-glide-dir="=7"></button>
   </div>
   </div>
 </div>
